# Colorcode

./: .gitignore  Cargo.toml  README.md
docs/: architecture.md  developer-guide.md  performance.md  specification.md
examples/: hello.txt  roundtrip.rs
src/: android_jni.rs  base16.rs  classifier.rs  compression.rs  decoder.rs  ecc.rs  encoder.rs  finder.rs  geometry.rs  homography.rs  layout.rs  lib.rs  main.rs  metadata.rs  palette.rs  renderer.rs  timing.rs  types.rs  vision.rs
tests/: roundtrip.rs
