[package]
name = "colorcode"
version = "0.1.0"
edition = "2024"
description = "Production-grade 16-color matrix code: encoder, decoder, and vision pipeline"
license = "MIT"
authors = ["ColorCode Authors"]
repository = "https://github.com/example/colorcode"
readme = "README.md"
keywords = ["barcode", "qr", "computer-vision", "reed-solomon", "color"]
categories = ["computer-vision", "encoding", "image-processing"]

[[bin]]
name = "colorcode"
path = "src/main.rs"

[lib]
name = "colorcode"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
crc32fast = "1"
lz4_flex = "0.11"
zstd = "0.13"
jni = { version = "0.21", default-features = false }
android_logger = "0.15"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1
